--- a/index.html
+++ b/index.html
@@ -1,62 +1,92 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen - MUHAMMAD ADITIA PWEB 1</title>
-  
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>CV Muhammad Aditia</title>
-  </head>
-  <body>
-    <h1 align="center">CV Muhammad Aditia</h1>
-    <hr>
-    <img src=""alt="">
-    <p style="text-align: center">Perkenalkan nama saya Muhammad Aditia, saya adalah mahasiswa di <strong>STT-NF</strong> program studi <strong>teknik informatika </strong>
-    </p>
-    <ol type="l">
-      <li><h2><span style="color:blue">BIODATA SAYA</h2></li>
-  <ol>
-     <ul>Nama : <strong>Muhammad Aditia</strong> 
-   </ul>
-      <ul>TTL : Sangia,31-05-2006</ul>
-      <ul>J-K : Laki-Laki</ul>
-   <ul>Alamat : Dusun Lewi Ruma</ul>
-    <ul>RT/RW : 014/008</ul>
- <ul>Kel/Desa : Sangia</ul>
-<ul>Kecamatan : Sape</ul>
-    <ul>Agama : Islam</ul>
-<ul>Pekerjaan : Pelajar/Mahasiswa</ul>
-      </ol>
-      </li>
-    <li><h2><span style="color:blue">RIWAYAT PENDIDIKAN</h2></li>
-      <ul>• SDN INPRES SANGIA</ul>
-      <ul>• MTS ALMUNAWARAH</ul>
-    <ul>• SMK NEGERI LAMBU</ul>
-   <ul>- Jurusan TKJ</ul>
-  <li><h2><span style="color:blue">PENGALAMAN</span></h2></li>
-  <ul>-Sebagai <strong>PRADANA</strong> ekskul pramuka</ul>
-  <ul>-Mengkonfigurasi ip adress</ul>
-  <ul>-Bisa menyusun Kabel LAN</ul>
-  <ul>-Pernah kerja digital printing</ul>
-  <li><h2><span style="color:blue">MINAT DAN BAKAT</h2></li>
-    <ul>-Software engineering</ul>
-     <ul>-Menghafal</ul>
-    </ol>
-      </div>
-  <div>
-    <a href="web1.html">web</a>
-    <a href="http://adytttiaaa.com">Instagram</a>
-    <a href="web2.html">web</a>
-    <a href="http://WhatsApp.com">WhatsApp</a>
-  </body>
-</html>
-<!-- partial -->
-  
+    <fieldset>
+        <legend>
+            14F-Directory Profile Page
+        </legend>
+
+        <table style="widht: 1000%">
+            <tbody>
+                <tr>
+                    <td>
+                        <img src="2.jpeg" alt="foto adi"width="200" height="200"/>
+                    </td>
+
+                    <td>
+                        <h2>
+                           MUHAMMAD ADITIA
+                        </h2>
+
+                        Gg haji kari no 59 Rt 05 Rw 01
+                        <br>
+                        srengseng sawah,
+                        Jagakarsa, Jakarta Selatan,Indonesia
+                        <br>
+                            No.Telp: 087765238923
+                            <br>
+                            email: <span style="color:blue;">aditiab344@gmail.com</span>
+                    </td>
+                    
+                    <td teks-align="right ">
+                        <a href=""> CATEGORIES </a>
+                        <br>
+                        <a href=""> Home </a>
+                        <br>
+                        <a href="">Profile</a>
+                        <br>
+                        <a href=""> Contact </a>
+                        <br>
+                        <a href=""> Achievement </a>
+                    </td>
+                    
+                </tr>
+            </tbody>
+        </table>
+
+        <article>
+            <h2>Let Me Introduce Myself</h2>
+            <section>
+                <h6>Halo perkenalkan nama saya Muhammad Aditia, saya berkuliah di STT Nurul Fikri karena bercita-citaaa untuk menjadi ahli di bidang IT.<br> Saya dari jurusan Teknik Informatika dan belajar di kelas TI02 dengan nomor NIM : 0110224213
+                </h6>
+                <h6>Demikian Profile web ini untuk perkenalan diri saya sebagai tugas pemrograman web.<br>Berikut adalah data diri saya:<br>Nama: Muhammad Aditia, Rombel: TI02, NIM: 0110224213
+                </h6>
+            </section>
+        </article>
+
+        <footer>
+
+            <fieldset style="width:270px; float:left;">
+                <audio controls>
+                    <source src="n.mp3" type="audio/mpeg">
+                </audio">
+            </fieldset>
+
+            <fieldset style="width:270px; float:left;">
+                <iframe src="m.mp4"></iframe>
+            </fieldset>
+
+            <fieldset>
+                <legend><strong>Attachment</strong></legend> 
+                <br>
+                <br>
+                <nav>
+                    <br>
+                     <a href="https://www.instagram.com/adytttiaaa/profilecard/?igsh=aDUwZ2F1aWp4NGl3">
+                        <img src="assets/icons8-pdf-64.png" alt="" width="17">INSTAGRAM ADIT</a><br>
+                    <a href="https://www.youtube.com/shorts/yXsURb9gk-0?feature=share">
+                         <img src="https://www.youtube.com/shorts/yXsURb9gk-0?feature=share" alt="" width="17">VIDIO LUCU</a><br>
+                    <a href=https://www.youtube.com/shorts/ptewmxm4sj4?feature=share">
+                     <img src="assets/icons8-pdf-64.png" alt="" width="17">VIDIO ANIMASI</a><br>
+                </nav>
+            </fieldset>
+        </footer>
+    </fieldset>
 </body>
 </html>
