--- a/index.html
+++ b/index.html
@@ -1,92 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <fieldset>
-        <legend>
-            14F-Directory Profile Page
-        </legend>
-
-        <table style="widht: 1000%">
-            <tbody>
-                <tr>
-                    <td>
-                        <img src="adi.jpeg" alt="foto aditia"width="200" height="300"/>
-                    </td>
-
-                    <td>
-                        <h2>
-                           Muhammad Aditia
-                        </h2>
-
-                        Gg haji kari no 59 Rt 05 Rw 01
-                        <br>
-                        srengseng sawah,
-                        Jagakarsa, Jakarta Selatan,Indonesia
-                        <br>
-                            No.Telp: 082339281498
-                            <br>
-                            email: <span style="color:blue;">aditiab344@gmail.com</span>
-                    </td>
-
-                    <td teks-align="right ">
-                        <a href=""> CATEGORIES </a>
-                        <br>
-                        <a href=""> Home </a>
-                        <br>
-                        <a href="">Profile</a>
-                        <br>
-                        <a href=""> Contact </a>
-                        <br>
-                        <a href=""> Achievement </a>
-                    </td>
-
-                </tr>
-            </tbody>
-        </table>
-
-        <article>
-            <h2>Let Me Introduce Myself</h2>
-            <section>
-                <h6>Halo perkenalkan nama saya Muhammad Aditia, saya berkuliah di STT Nurul Fikri karena bercita-citaaa untuk menjadi ahli di bidang IT.<br> Saya dari jurusan Teknik Informatika dan belajar di kelas TI01 dengan nomor NIM : 0110224222
-                </h6>
-                <h6>Demikian Profile web ini untuk perkenalan diri saya sebagai tugas pemrograman web.<br>Berikut adalah data diri saya:<br>Nama: Muhammad Aditia, Rombel: TI01, NIM: 0110224213
-                </h6>
-            </section>
-        </article>
-
-        <footer>
-
-            <fieldset style="width:270px; float:left;">
-                <audio controls>
-                    <source src="dana tambora.mp3" type="audio/mpeg">
-                </audio">
-            </fieldset>
-
-            <fieldset style="width:270px; float:left;">
-                <iframe src="al-mulk.mp4"></iframe>
-            </fieldset>
-
-            <fieldset>
-                <legend><strong>Attachment</strong></legend> 
-                <br>
-                <br>
-                <nav>
-                    <br>
-                     <a href="https://www.instagram.com/adytttiaaa/profilecard/?igsh=aDUwZ2F1aWp4NGl3">
-                        <img src="assets/icons8-pdf-64.png" alt="" width="17">INSTAGRAM </a><br>
-                    <a href="https://youtu.be/8-xeH1QEv5M">
-                         <img src="https://www.youtube.com/shorts/yXsURb9gk-0?feature=share" alt="" width="17">VIDIO </a><br>
-                    <a href="https://github.com/MuhammadAditia31/adityaaa31.git">
-                     <img src="assets/icons8-pdf-64.png" alt="" width="17">GITHUB  SAYA</a><br>
-                </nav>
-            </fieldset>
-        </footer>
-    </fieldset>
-</body>
+<html>
+    <head>
+        <title>CV saya</title>
+        </head>
+    <body bgcolor="azure">
+        <h1 style="text-align:center"> Curriculum Vitae</h1>
+        <hr width="500"/>
+        <p style="text-align:center">Perkenalkan nama saya Muhammad Aditia 
+            Mahasiswa dari <strong>STT-NF</strong> Program Studi Teknik Informatika Angkatan 2024</p>
+         <img src="foto.jpg" width="25%" alt="Adit"> 
+            <div style="background-color:azure;">
+        <h2>Data Pribadi</h2>
+             <ul>
+                <li>Nama           : Muhammad aditia</li>
+                <li>Nim            : 0110224213</li>
+                <li>Kelas          : TI-02</li>
+                <li>Tanggal Lahir  : Sangia, 31 Mei 2006</li>
+                <li>Alamat         : Bima NTB</li>
+             </ul>
+         <h2>Biodata Pendidikan Formal</h2>
+             <ol type="a">
+                <li> SDN Inp Sangia, 2010-2016 </li>
+                <li>MTSN AL-Munawwarah Sape, 2016-2019</li>
+                <li>SMKN 1 Lambu, 2019-2022</li>
+                <li>Teknik Informatika <span style="color:blue">STT-NF</span></li>
+            </ol>
+             <a href="web01.html"><web01.html>web01.html</a>
+             <a href="https://github.com/MuhammadAditia31/adityaaa31.git" target="none">github saya</a>
+              <a href="aditiab344@gmail.com">email saya</a>
+         </div>
+        </body>
 </html>
