--- a/index.html
+++ b/index.html
@@ -1,33 +1,63 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>CV saya</title>
-        </head>
-    <body bgcolor="azure">
-        <h1 style="text-align:center"> Curriculum Vitae</h1>
-        <hr width="500"/>
-        <p style="text-align:center">Perkenalkan nama saya Muhammad Aditia 
-            Mahasiswa dari <strong>STT-NF</strong> Program Studi Teknik Informatika Angkatan 2024</p>
-         <img src="foto.jpg" width="25%" alt="Adit"> 
-            <div style="background-color:azure;">
-        <h2>Data Pribadi</h2>
-             <ul>
-                <li>Nama           : Muhammad aditia</li>
-                <li>Nim            : 0110224213</li>
-                <li>Kelas          : TI-02</li>
-                <li>Tanggal Lahir  : Sangia, 31 Mei 2006</li>
-                <li>Alamat         : Bima NTB</li>
-             </ul>
-         <h2>Biodata Pendidikan Formal</h2>
-             <ol type="a">
-                <li> SDN Inp Sangia, 2010-2016 </li>
-                <li>MTSN AL-Munawwarah Sape, 2016-2019</li>
-                <li>SMKN 1 Lambu, 2019-2022</li>
-                <li>Teknik Informatika <span style="color:blue">STT-NF</span></li>
-            </ol>
-             <a href="web01.html"><web01.html>web01.html</a>
-             <a href="https://github.com/MuhammadAditia31/adityaaa31.git" target="none">github saya</a>
-              <a href="aditiab344@gmail.com">email saya</a>
-         </div>
-        </body>
+<html lang="en">
+<head>
+    <title>STT Terpadu Nurul Fikri</title>
+    <link rel="stylesheet" href="style1.css"
+</head>
+<body>
+   <header>
+        <div class ="img">
+            <img src="logo.png" alt="STT Terpadu Nurul Fikri">
+        </div>
+        <ul>
+            <li><a href="#">Beranda</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Program studi</a></li>
+            <li><a href="#">Akademi</a></li>
+            <li><a href="#">penelitian</a></li>
+        </ul>
+   </header> 
+   <main>
+        <section id="banner">
+        <div class="Promosi">
+            <h2>PENDAFTARAN MAHASISWA BARU ADMISI STT NURUL FIKRI</h2>
+            <p class="welcome">pendaftaran mahasiswa  baru telah di buka ayo segera daftarkan diri anda </p>
+        </div>
+
+        </section>
+        <section id ="prodi">
+            <div class ="card">
+                <h4>Info Pendaftaran Mahasiswa Baru</h4>
+                <p>Informasi Penerimaan Mahasiswa Baru STT Nurul Fikri mengenai persyaratan, alur pendaftaran, biaya, dll.</p>
+                <a href="btn-mobile">Admisi Pendaftaran</a>
+            </div>
+            <div class="card">
+                <h4>Info Pendaftaran Mahasiswa Baru</h4>
+                <p>Informasi Penerimaan Mahasiswa Baru STT Nurul Fikri mengenai persyaratan, alur pendaftaran, biaya, dll.</p>
+                <a href="btn-mobile">Admisi Pendaftaran</a>
+            </div>
+            <div class="card">
+                <h4>Info Pendaftaran Mahasiswa Baru</h4>
+                <p>Informasi Penerimaan Mahasiswa Baru STT Nurul Fikri mengenai persyaratan, alur pendaftaran, biaya, dll.</p>
+                <a href="btn-mobile">Admisi Pendaftaran</a>
+            </div>
+            <div class="card">
+                <h4>Info Pendaftaran Mahasiswa Baru</h4>
+                <p>Informasi Penerimaan Mahasiswa Baru STT Nurul Fikri mengenai persyaratan, alur pendaftaran, biaya, dll.</p>
+                <a href="btn-mobile">Admisi Pendaftaran</a>
+            </div>
+            <div class="card">
+                <h4>Info Pendaftaran Mahasiswa Baru</h4>
+                <p>Informasi Penerimaan Mahasiswa Baru STT Nurul Fikri mengenai persyaratan, alur pendaftaran, biaya, dll.</p>
+                <a href="btn-mobile">Admisi Pendaftaran</a>
+            </div>
+            <div class="card"><h4>Info Pendaftaran Mahasiswa Baru</h4>
+                <p>Informasi Penerimaan Mahasiswa Baru STT Nurul Fikri mengenai persyaratan, alur pendaftaran, biaya, dll.</p>
+                <a href="btn-mobile">Admisi Pendaftaran</a></div>
+            
+            
+
+        </section>
+   </main>
+</body>
 </html>
